<resources>
    <string name="app_name" translatable="false">FaceGeek</string>
    <string name="user_registration">User Registration</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="signup">Signup</string>
    <string name="already_registered_signin_here">Already Registered? Signin Here</string>
    <string name="logout">Logout</string>
    <string name="user_login">User Login</string>
    <string name="enter_your_email">Enter email</string>
    <string name="enter_your_password">Enter password</string>
    <string name="signup_">Sign In</string>
    <string name="not_have_an_account_signup_here">Not have an account? Signup Here</string>
    <string name="recover_password">Recover Password</string>
    <string name="hashing">hashing</string>
    <string name="username">Username</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="home">HOME</string>
    <string name="upload">UPLOAD</string>
    <string name="myupload">myupload</string>
    <string name="my_upload">MY UPLOAD</string>
    <string name="go_to_dashboard">GO TO DASHBOARD</string>
    <string name="title_activity_tabbed">tabbed</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="upload_section">upload section</string>
    <string name="upload_image_from_gallery">Upload Image From Gallery</string>
    <string name="click">Click here to upload images</string>
    <string name="kutta">kutta</string>
    <string name="browse_from_gallery">Browse From Gallery</string>
    <string name="image3">Image Name</string>
    <string name="upload_image">upload image</string>
    <string name="browse_from_camera">Browse From Camera</string>
    <string name="show_my_uploads">Show My Uploads</string>
    <string name="image_name">Image name</string>
    <string name="log_out">Log Out</string>
    <string name="description">Description</string>
    <string name="description1">Description</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hinsa">hinsa</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_fragment">upload fragment</string>
    <string name="home_fragment">Home fragment</string>
    <string name="my_upload_fragment">My upload fragment</string>
    <string name="fragment_2">fragment 2</string>
    <string name="my_upload_fragment1">My upload Fragment</string>
    <string name="hello">hello</string>
    <string name="name_of_image">NAME OF IMAGE</string>
    <string name="dikhabada">dikhabada</string>
    <string name="description_of_image">Description Of Image</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="this_is_my_name">THIS IS MY NAME</string>
    <string name="this_is_my_college">this is my college</string>
    <string name="this_is_my_school">this is my school</string>
    <string name="country">country</string>
    <string name="relationship">relationship</string>
    <string name="birthday">birthday</string>
    <string name="edit_your_profile_details">Edit Your Profile Details</string>
    <string name="this_is_my_state">this is my state</string>
    <string name="your_school">your school</string>
    <string name="enter_your_birthdate">Enter Your Birthdate</string>
    <string name="enter_your_relationship_status">Enter Your Relationship Status</string>
    <string name="enter_your_country">Enter Your country</string>
    <string name="enter_your_state">Enter Your State</string>
    <string name="enter_college_else_null">Enter College else NUll</string>
    <string name="enter_your_colleg_name">Enter Your Colleg Name</string>
    <string name="enter_your_bday_dd_mm_yy">Enter your Bday dd/mm/yy</string>
    <string name="username_first_name_last_name">UserName(First name Last name)</string>
    <string name="edit_your_timeline_pic">Edit your timeline pic</string>
    <string name="edit_your_profile_pic">Edit Your Profile Pic</string>
    <string name="welcome">WELCOME</string>
    <string name="delete">DELETE</string>
    <string name="delete_from_your_upload">DELETE FROM YOUR UPLOAD</string>
    <string name="delete_from_home">DELETE FROM HOME</string>
    <string name="status">STATUS</string>
    <string name="whats_s_on_your_mind">Whats\'s On Your Mind</string>
    <string name="upload_status">UPLOAD STATUS</string>
    <string name="chatroom">CHATROOM</string>
    <string name="messagge">message...</string>
    <string name="number_of_likes">Number of likes</string>
    <string name="number_of_likes1">Number Of likes :</string>
    <string name="_0">0</string>
    <string name="upload_an_image">UPLOAD AN IMAGE</string>
    <string name="notification">NOTIFICATION</string>
    <string name="empty">Empty</string>
    <string name="dj_notification">DJ notification</string>
    <string name="close_me">Close Me</string>
    <string name="you_have_a_new_notification_check_yournotification_pannel">You Have A New Notification.Check YourNotification Pannel</string>
    <string name="successfully_uploaded">Successfully uploaded</string>
    <string name="you_have_new_notifications">You Have New Notifications.</string>
    <string name="check">Check</string>
    <string name="you_have_new_notifications1">FaceGeek: You Have New Notifications</string>
    <string name="add">Add Friend</string>
    <string name="feedback">FEEDBACK</string>
    <string name="hum_toh_tere_ashiq">Hum toh tere ashiq</string>
    <string name="group_chat">Group Chat</string>
    <string name="users">USERS</string>
</resources>
