<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#E7FFE7"
    android:layout_height="match_parent"
    tools:context="com.example.mohit.myolx.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/background_light"
                android:text="@string/user_login"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/background_light" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/buttonSignin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@color/colorPrimary"
                android:text="@string/signup_"
                android:textColor="@android:color/background_light" />

            <TextView
                android:id="@+id/recoverpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                android:text="@string/recover_password"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/textViewSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/not_have_an_account_signup_here"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>
    </RelativeLayout>

</ScrollView>
